# GolemianDiscordBot

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  nixpacks.toml
.claude/: settings.local.json
src/: database.rs  main.rs  modlog.rs  tempvc.rs  ticket.rs
src/commands/: giveaway.rs  help.rs  mod.rs  moderation.rs  owner.rs  poll.rs  server.rs  tempvc.rs  ticket.rs  utility.rs
